--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html lang="en" dir="ltr">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+    <meta charset="utf-8">
+    <title>Battle Ships</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="app.js" charset="utf-8"></script>
+</head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
+    <div id="start-game-container">
+        <input id="start-game-name-area"></input>
+        <button id="join-game-button">Join Game</button>
+        <button id="dc-game-button">Disconnect</button>
+    </div>
+    <br/>
+    <div>
+        <button id="shuffle-teams-button" hidden>Shuffle Teams</button>
+        <button id="start-game-button" hidden>Start Game</button>
+    </div>
+    <br/>
+    <div id="game-meta-container">
+        <div id="player-info-container">
+            <div id="player-info-table"></div>
+        </div>
+        <br/>
+        <div id="messages" style="float: right; width: 500px; height: 300px; background-color: aliceblue; overflow: scroll; display: none;">Messages:</div>
+        <div id="hand"></div>
+        <div id="declarebox" style="display: none;">
+            Book: <select id="book-selector"></select>
+            <button id="declare-set">Declare</button>
+        </div>
+        <div id="askbox" style="display: none;">
+            Ask
+            <select id="player-name-selector"></select> for the <select id="rank-selector"></select> (of <select id="suit-selector"></select>)
+            <button id="ask-button">Request</button>
+        </div>
+    </div>
+</body>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
 </html>
