--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <input id="start-game-name-area"></input>
         <button id="join-game-button">Join Game</button>
         <button id="dc-game-button">Disconnect</button>
+        <button id="drop-all-button">Drop All Connections</button>
     </div>
     <br/>
     <div>
